Fixed index layout issues and footer issue

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ display: none;
 	width:18%;
 	height:20%;
 	margin: 5px 0px 5px 10px; 
-	float: left;
+	display:inline-block;
 	font-size:0.85em;
 }
 .indexProjectBox img{
